<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bkg"
    tools:context=".PostActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24" />

        <ImageView
            android:id="@+id/imageView_header"
            android:layout_width="299dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:scaleType="fitStart"
            app:layout_constraintBottom_toTopOf="@+id/textView_project_submission"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/gads2" />

        <TextView
            android:id="@+id/textView_project_submission"
            style="@android:style/Widget.DeviceDefault.Light.TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@android:color/background_dark"
            android:text="@string/project_submission"
            android:textAlignment="center"
            android:textColor="#FFC107"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_header" />

        <EditText
            android:id="@+id/editText_first_name"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/input_text"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:padding="8dp"
            app:layout_constraintBottom_toTopOf="@+id/editText_email"
            app:layout_constraintEnd_toStartOf="@+id/editText_last_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_project_submission" />

        <EditText
            android:id="@+id/editText_last_name"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/input_text"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:padding="8dp"
            app:layout_constraintBottom_toTopOf="@+id/editText_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editText_first_name"
            app:layout_constraintTop_toBottomOf="@+id/textView_project_submission" />

        <EditText
            android:id="@+id/editText_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="72dp"
            android:autofillHints="@string/email"
            android:background="@drawable/input_text"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:padding="8dp"
            app:layout_constraintBottom_toTopOf="@+id/editText_github_link"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_first_name" />

        <EditText
            android:id="@+id/editText_github_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/input_text"
            android:ems="10"
            android:hint="@string/project_on_github_link"
            android:inputType="textPersonName"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_email" />

        <Button
            android:id="@+id/button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="116dp"
            android:background="@drawable/buttob_submit2"
            android:shadowColor="@color/white"
            android:shadowRadius="10"
            android:text="@string/button_submit2"
            android:textColor="@color/cardview_light_background"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.527"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_github_link" />

        <TextView
            android:id="@+id/line"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:height="?android:attr/scrollbarSize"
            android:background="@drawable/line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_project_submission" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>